// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon All icons - icon audio renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#audio"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon back renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#back"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon book renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#book"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon brochure renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#brochure"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon budget renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#budget"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon calendar renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#calendar"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon check renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#check"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon check-filled renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#check-filled"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon close renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#close"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon close-filled renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#close-filled"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon copy renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#copy"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon corner-arrow renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#corner-arrow"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon data renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#data"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon digital renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#digital"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon download renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#download"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon edit renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#edit"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon energy renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#energy"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon error renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#error"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon euro renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#euro"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon external renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#external"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon faq renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#faq"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon feedback renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#feedback"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon file renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#file"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon fullscreen renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#fullscreen"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon gear renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#gear"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon generic-lang renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#generic-lang"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon global renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#global"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon growth renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#growth"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon hamburger renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#hamburger"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon image renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#image"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon infographic renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#infographic"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon information renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#information"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon language renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#language"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon list renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#list"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon livestreaming renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#livestreaming"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon location renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#location"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon log-in renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#log-in"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon logged-in renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#logged-in"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon minus renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#minus"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon multiple-files renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#multiple-files"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon organigram renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#organigram"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon package renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#package"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon plus renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#plus"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon presentation renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#presentation"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon print renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#print"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon regulation renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#regulation"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon rss renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#rss"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon search renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#search"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon share renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#share"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon solid-arrow renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#solid-arrow"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon spinner renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#spinner"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon spreadsheet renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#spreadsheet"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon success renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#success"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon tag renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#tag"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon video renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#video"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon video-play renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#video-play"
    />
  </svg>
</jest>
`;

exports[`Icon All icons - icon warning renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#warning"
    />
  </svg>
</jest>
`;

exports[`Icon Generic tests - Any icon renders correctly with accessibility content 1`] = `
<jest>
  <svg
    aria-hidden="false"
    aria-labelledby="example-title example-desc"
    class="ecl-icon ecl-icon--m"
    focusable="false"
    role="img"
  >
    <title
      id="example-title"
    >
      Title
    </title>
    <desc
      id="example-desc"
    >
      Description
    </desc>
    <use
      xlink:href="/icons.svg#audio"
    />
  </svg>
</jest>
`;

exports[`Icon Generic tests - Any icon renders correctly with extra attributes 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#audio"
    />
  </svg>
</jest>
`;

exports[`Icon Generic tests - Any icon renders correctly with extra class names 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m custom-class custom-class--test"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#audio"
    />
  </svg>
</jest>
`;
